<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context=".view.PictureDetailActivity">

    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_layout_height"
        android:theme="@style/ActionBarThemeOverlay"><!-- nuevo tema para appbar -->

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/colapsingTolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorAccent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_imageview"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/HeaderBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ActionBarPopupThemeOverlay"
                app:titleTextAppearance="@style/Toolbar.TitleText" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="10dp"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/usernameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="15dp"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/usernameCard"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/textSizeUsernameCard" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hieght_dividir"
                android:background="@color/colorDivider" />

            <TextView
                android:id="@+id/textContenImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill|center"
                android:justificationMode="inter_word"
                android:paddingLeft="35dp"
                android:paddingTop="20dp"
                android:paddingRight="35dp"
                android:text="@string/lore"
                android:textColor="@color/colorSecondaryText"
                android:textSize="15sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/hieght_dividir"
                android:background="@color/colorDivider" />

            <TextView
                android:id="@+id/titleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="35dp"
                android:paddingTop="20dp"
                android:text="@string/control_plaga"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/textSizeUsernameCard" />

            <TextView
                android:id="@+id/textContenImage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill"
                android:paddingLeft="35dp"
                android:paddingTop="20dp"
                android:paddingRight="35dp"
                android:text="@string/lore"
                android:textColor="@color/colorSecondaryText"
                android:textSize="15sp" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <!--queda el app:layout_behabiur-->


</android.support.design.widget.CoordinatorLayout>